# PythonExtensionsWithRust

./: .gitignore  Cargo.toml  pyproject.toml
notebooks/: time_performance.ipynb
python/app/: fibonacci.py  pi.py  time_fibonacci.py  time_fibonacci_rust.py
src/: fibonacci.py  fibonacci.rs  lib.rs  pi.rs
src/factorial/: Cargo.toml
src/factorial/src/: cli.rs  main.rs
