[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jasper Sival <jasper.sival@alliander.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
maturin = "^0.14.6"
jupyter = "^1.0.0"
cffi = "^1.15.1"

[tool.maturin]
python-source = "python"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

